# llm_c_opt

./: .gitignore  README.md  example.py  main.py  platform_info.py  pyproject.toml  setup.cfg  setup.py
llm_opt/: __init__.py  main.py
llm_opt/api/: __init__.py  deepseek.py  mock_client.py  optimize.py
llm_opt/api/clients/: __init__.py  base.py  deepseek.py  groq.py  mock.py
llm_opt/core/: __init__.py  analyzer.py  c_function.py  iteration_artifact.py  loader.py  optimizer.py  performance_report.py  signature.py  type_interface.py
llm_opt/utils/: artifact_collection.py  artifacts_to_html.py  constants.py  helpers.py  llm_artifact_logger.py  logging_config.py  prompts.py
tests/: __init__.py  test_artifact_collection.py  test_cfunction.py  test_deepseek_client.py  test_iteration_artifact.py  test_mock_client.py  test_optimizer.py  test_performance_report.py  test_signature.py
