[project]
name = "llm-opt"
version = "0.1.0"
description = "Matrix Multiplication Optimization using DeepSeek API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=0.18.0",
    "numpy>=2.2.3",
    "py-cpuinfo>=9.0.0",
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.scripts]
llm-opt = "main:main"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
