[metadata]
name = llm-opt
version = 0.1.0
description = NumPy-to-C Optimizer using DeepSeek API
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/llm-opt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.12
install_requires =
    numpy>=2.2.0
    requests>=2.31.0

[options.extras_require]
dev =
    black
    flake8
    isort
    mypy
    pytest
    pytest-cov

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist

[isort]
profile = black
line_length = 100

[mypy]
python_version = 3.12
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True

[mypy.plugins.numpy.*]
follow_imports = skip

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_* 